Change to add regular seat and seat with counter option

--- a/client/room.html
+++ b/client/room.html
@@ -171,8 +171,12 @@
       <div class="category">
         <h2>Interactive</h2>
         <button class="ui-button" id="addCanvas">Add Canvas</button>
-        <button class="ui-button" id="addSeat">Add Seat</button>
+        <div style="display: flex;justify-content: center;">
+          <button class="ui-button" id="addSeat">Add Seat</button>
+          <button class="ui-button" id="addSeatCounter">+ Counter</button>
+        </div>
       </div>
+      
       <div class="category">
         <h2>Decorative</h2>
         <button class="ui-button" id="addScoreboard">Add Scoreboard</button>
