--- a/client/room.html
+++ b/client/room.html
@@ -161,23 +161,23 @@
     </div>
 
     <div id="addOverlay" class="overlay">
-      <div class="category">
+      <div class="category cards">
         <h2>Cards</h2>
         <button class="ui-button" id="addHand">Add hand</button>
       </div>
-      <div class="category">
+      <div class="category pieces">
         <h2>Game Pieces</h2>
       </div>
-      <div class="category">
+      <div class="category interactive">
         <h2>Interactive</h2>
         <button class="ui-button" id="addCanvas">Add Canvas</button>
         <button class="ui-button" id="addSeat">Add Seat</button>
-      </div>
-      <div class="category">
-        <h2>Decorative</h2>
         <button class="ui-button" id="addScoreboard">Add Scoreboard</button>
       </div>
-      <div class="category">
+      <div class="category decorative">
+        <h2>Decorative</h2>
+      </div>
+      <div class="category custom">
         <h2>Custom</h2>
         <button class="ui-button" id="uploadBoard">Upload Board</button>
         <button class="ui-button" id="uploadToken">Upload Token</button>
