--- a/client/room.html
+++ b/client/room.html
@@ -171,9 +171,11 @@
         </div>
         <div class="category interactive">
           <h2>Interactive</h2>
-          <button class="ui-button" id="addCanvas">Add Canvas</button>
-          <button class="ui-button" id="addSeat">Add Seat</button>
-          <button class="ui-button" id="addScoreboard">Add Scoreboard</button>
+          <div style="display: flex;justify-content: center;">
+            <button class="ui-button" id="addCanvas">Add Canvas</button>
+            <button class="ui-button" id="addSeat">Add Seat</button>
+            <button class="ui-button" id="addScoreboard">Add Scoreboard</button>
+          </div>
         </div>
         <div class="category decorative">
           <h2>Decorative</h2>
