Modify css for spacers; two rows for interactive buttons.

--- a/client/room.html
+++ b/client/room.html
@@ -172,10 +172,12 @@
         <div class="category interactive">
           <h2>Interactive</h2>
           <div style="display: flex;justify-content: center;">
-            <button class="ui-button" id="addCanvas">Add Canvas</button>
-            <button class="ui-button" id="addSeat">Add Seat</button>
-            <button class="ui-button" id="addSeatCounter">+ Counter</button>
+            <button class="ui-button" id="addCanvas">Add Canvas</button><br>
             <button class="ui-button" id="addScoreboard">Add Scoreboard</button>
+          </div>
+          <div style="display: flex;justify-content: center;">
+            <button class="ui-button" id="addSeat">Add Seat</button><br>
+            <button class="ui-button" id="addSeatCounter">+ Counter</button>
           </div>
         </div>
         <div class="category decorative">
