serve the editor code as `/edit.html`

--- a/client/editor.html
+++ b/client/editor.html
@@ -1,3 +1,5 @@
+<style> /*** CSS ***/ </style>
+
 <div id="editorOverlays">
   <div id="editOverlayVue">
     <div id="editOverlay" class="overlay">
@@ -173,3 +175,5 @@
   </div>
   <div id="traceUI"><input type="range" id="traceInput"></div>
 </div>
+
+<script type="module"> //*** CONFIG ***//  //*** JS ***// </script>
