load edit mode only when activating Edit Mode, JSON Editor or Add Widget Overlay

--- a/client/editor.html
+++ b/client/editor.html
@@ -1,6 +1,6 @@
 <div id="editorOverlays">
   <div id="editOverlayVue">
-    <div id="editOverlay" class="overlay">
+    <div id="editOverlay" class="overlay" style="display: none">
       <div class="basicEdit">
         <h1>Edit widget</h1>
         <h3>Select type:</h3>
@@ -101,7 +101,7 @@
       <base-edit-overlay ></base-edit-overlay>
     </div>
 
-    <div id="editJSONoverlay" class="overlay">
+    <div id="editJSONoverlay" class="overlay" style="display: none">
       <h1>Edit widget JSON</h1>
       <p>Please check <a href="https://github.com/ArnoldSmith86/virtualtabletop/wiki/Creating-Games">our GitHub wiki for documentation</a>. You can also open this room in <a href="https://virtualtabletop.io/legacy-editor.htm" id="legacy-link">the legacy editor</a> or press CTRL+J for the advanced JSON editor.</p>
       <textarea id="editWidgetJSON"></textarea>
@@ -109,7 +109,7 @@
     </div>
   </div>
 
-  <div id="addOverlay" class="overlay">
+  <div id="addOverlay" class="overlay" style="display: none">
     <div class="category cards">
       <h2>Cards</h2>
       <button class="ui-button" id="addHand">Add hand</button>
