new editor - first steps of the toolbar

--- a/client/editor.html
+++ b/client/editor.html
@@ -138,6 +138,12 @@
   </div>
 </div>
 
+<div id="editor">
+  <div id="editorToolbar"></div>
+  <div id="editorSidebar"></div>
+  <div id="editorModule"></div>
+</div>
+
 <div id="jsonEditor">
   <div id="jeWidgetLayers">
     <div id="jeWidgetLayer1"></div>
