right-clicking and ctrl-clicking opens multiple sidebar modules

--- a/client/editor.html
+++ b/client/editor.html
@@ -141,7 +141,12 @@
 <div id="editor">
   <div id="editorToolbar"></div>
   <div id="editorSidebar"></div>
-  <div id="editorModule"></div>
+  <div id="editorModules">
+    <div id="editorModuleTopLeft"></div>
+    <div id="editorModuleTopRight"></div>
+    <div id="editorModuleBottomLeft"></div>
+    <div id="editorModuleBottomRight"></div>
+  </div>
 </div>
 
 <div id="jsonEditor">
