shift-clicking a module button now opens it as an overlay above the room

--- a/client/editor.html
+++ b/client/editor.html
@@ -136,6 +136,9 @@
       <button class="ui-button" id="addBasicWidget">Add Basic Widget</button>
     </div>
   </div>
+  <div id="editorModuleOverlay" class="overlay" style="display: none">
+    <div id="editorModuleInOverlay"></div>
+  </div>
 </div>
 
 <div id="editor">
