changed undo module to use classes for styling

--- a/client/editor.html
+++ b/client/editor.html
@@ -137,7 +137,7 @@
     </div>
   </div>
   <div id="editorModuleOverlay" class="overlay" style="display: none">
-    <div id="editorModuleInOverlay"></div>
+    <div id="editorModuleInOverlay" class="editorModule"></div>
   </div>
 </div>
 
@@ -145,10 +145,10 @@
   <div id="editorToolbar"></div>
   <div id="editorSidebar"></div>
   <div id="editorModules">
-    <div id="editorModuleTopLeft"></div>
-    <div id="editorModuleTopRight"></div>
-    <div id="editorModuleBottomLeft"></div>
-    <div id="editorModuleBottomRight"></div>
+    <div id="editorModuleTopLeft" class="editorModule"></div>
+    <div id="editorModuleTopRight" class="editorModule"></div>
+    <div id="editorModuleBottomLeft" class="editorModule"></div>
+    <div id="editorModuleBottomRight" class="editorModule"></div>
   </div>
 </div>
 
