implemented selecting widgets by drawing rectangles and fixed multi selection in tree

--- a/client/editor.html
+++ b/client/editor.html
@@ -142,6 +142,7 @@
 </div>
 
 <div id="editor">
+  <div id="editorSelection"></div>
   <div id="editorToolbar"></div>
   <div id="editorSidebar"></div>
   <div id="editorModules">
