--- a/client/editor.html
+++ b/client/editor.html
@@ -144,7 +144,7 @@
 <div id="editor">
   <div id="editorSelection"></div>
   <div id="editorToolbar"></div>
-  <div id="editorDragToolbar"></div>
+  <div id="editorDragToolbar"><div id="editorDragToolbarFeedback"></div></div>
   <div id="editorSidebar"></div>
   <div id="editorModules">
     <div id="editorModuleTopLeft" class="editorModule"></div>
