added F-keys above the JSON editor commands (probably temporary)

--- a/client/editor.html
+++ b/client/editor.html
@@ -155,20 +155,6 @@
 </div>
 
 <div id="jsonEditor">
-  <div id="jeWidgetLayers">
-    <div id="jeWidgetLayer1"></div>
-    <div id="jeWidgetLayer2"></div>
-    <div id="jeWidgetLayer3"></div>
-    <div id="jeWidgetLayer5"></div>
-    <div id="jeWidgetLayer6"></div>
-    <div id="jeWidgetLayer7"></div>
-    <div id="jeWidgetLayer8"></div>
-    <div id="jeWidgetLayer9"></div>
-    <div id="jeWidgetLayer10"></div>
-    <div id="jeWidgetLayer11"></div>
-    <div id="jeWidgetLayer12"></div>
-  </div>
-
   <div id="jeEditArea">
     <div id="jeEditHeader">CTRL-click a widget on<br>the left to edit it.</div>
     <div id="jeMouseCoords"></div>
@@ -182,7 +168,21 @@
     <div id="jeTextHighlight"></div>
     <div id="jeText" contenteditable="true" spellcheck="false"></div>
   </div>
-  <div id="jeCommands"></div>
+  <div id="jeCommands">
+    <div id="jeWidgetLayers">
+      <div id="jeWidgetLayer1"></div>
+      <div id="jeWidgetLayer2"></div>
+      <div id="jeWidgetLayer3"></div>
+      <div id="jeWidgetLayer5"></div>
+      <div id="jeWidgetLayer6"></div>
+      <div id="jeWidgetLayer7"></div>
+      <div id="jeWidgetLayer8"></div>
+      <div id="jeWidgetLayer9"></div>
+      <div id="jeWidgetLayer10"></div>
+      <div id="jeWidgetLayer11"></div>
+      <div id="jeWidgetLayer12"></div>
+    </div>
+  </div>
   <div id="jeLogWrapper">
     <div id="jeLog">
     </div>
