--- a/client/room.html
+++ b/client/room.html
@@ -42,6 +42,7 @@
     </div>
 
     <div id="pileOverlay" class="overlay">
+      <div class="modal"></div>
     </div>
 
     <div id="askIDoverlay" class="overlay">
