--- a/client/editor.html
+++ b/client/editor.html
@@ -164,17 +164,18 @@
   </div>
   <div id="jeCommands">
     <div id="jeWidgetLayers">
-      <div id="jeWidgetLayer1"></div>
-      <div id="jeWidgetLayer2"></div>
-      <div id="jeWidgetLayer3"></div>
-      <div id="jeWidgetLayer5"></div>
-      <div id="jeWidgetLayer6"></div>
-      <div id="jeWidgetLayer7"></div>
-      <div id="jeWidgetLayer8"></div>
-      <div id="jeWidgetLayer9"></div>
-      <div id="jeWidgetLayer10"></div>
-      <div id="jeWidgetLayer11"></div>
-      <div id="jeWidgetLayer12"></div>
+      <p>This will show you the widgets under your cursor. In order to interact with an obscured widget, you can press the corresponding function key to select it.</p>
+      <div id="jeWidgetLayer1"><span class="key">F1</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer2"><span class="key">F2</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer3"><span class="key">F3</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer5"><span class="key">F5</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer6"><span class="key">F6</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer7"><span class="key">F7</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer8"><span class="key">F8</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer9"><span class="key">F9</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer10"><span class="key">F10</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer11"><span class="key">F11</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+      <div id="jeWidgetLayer12"><span class="key">F12</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
     </div>
   </div>
   <div id="jeLogWrapper">
