hide layer hotkeys when first loaded

--- a/client/editor.html
+++ b/client/editor.html
@@ -165,17 +165,17 @@
   <div id="jeCommands"></div>
   <div id="jeWidgetLayers">
     <p>This will show you the widgets under your cursor. In order to interact with an obscured widget, you can press the corresponding function key to select it.</p>
-    <div id="jeWidgetLayer1"><span class="key">F1</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer2"><span class="key">F2</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer3"><span class="key">F3</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer5"><span class="key">F5</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer6"><span class="key">F6</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer7"><span class="key">F7</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer8"><span class="key">F8</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer9"><span class="key">F9</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer10"><span class="key">F10</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer11"><span class="key">F11</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
-    <div id="jeWidgetLayer12"><span class="key">F12</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer1" class="hidden"><span class="key">F1</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer2" class="hidden"><span class="key">F2</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer3" class="hidden"><span class="key">F3</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer5" class="hidden"><span class="key">F5</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer6" class="hidden"><span class="key">F6</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer7" class="hidden"><span class="key">F7</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer8" class="hidden"><span class="key">F8</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer9" class="hidden"><span class="key">F9</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer10" class="hidden"><span class="key">F10</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer11" class="hidden"><span class="key">F11</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
+    <div id="jeWidgetLayer12" class="hidden"><span class="key">F12</span><span class="keyDetails"><span class="type"></span> <span class="id"></span><span class="details"></span></span></div>
   </div>
   <div id="jeLogWrapper">
     <div id="jeLog">
