resizable editor sidebar

--- a/client/editor.html
+++ b/client/editor.html
@@ -147,6 +147,7 @@
   <div id="editorDragToolbar"><div id="editorDragToolbarFeedback"></div></div>
   <div id="editorSidebar"></div>
   <div id="editorModules">
+    <div id="editorModulesResizer"></div>
     <div id="editorModuleTopLeft" class="editorModule"></div>
     <div id="editorModuleTopRight" class="editorModule"></div>
     <div id="editorModuleBottomLeft" class="editorModule"></div>
