--- a/client/room.html
+++ b/client/room.html
@@ -5,24 +5,26 @@
   <meta charset="utf-8">
   <title>VirtualTabletop.io</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <base target="_blank">
+  <script>if(location.href.includes('/game/'))document.querySelector('base').href='..'</script>
+  <script>if(location.href.match(/\/game\/[a-z0-9]{8}\//))document.querySelector('base').href='../..'</script>
   <link rel="icon" sizes="any" href="i/branding/favicon-32.png"/>
   <link rel="icon" type="image/svg+xml" href="i/branding/favicon.svg"/>
   <link rel="apple-touch-icon" sizes="180x180" href="i/branding/ios-icon.png">
   <link rel="manifest" href="i/branding/manifest.json">
   <link rel="mask-icon" href="i/branding/mask-icon.svg">
   <script src="https://cdn.jsdelivr.net/npm/vue@3.0.7/dist/vue.global.prod.js"></script>
-  <base target="_blank">
   <style> /*** CSS ***/ </style>
 </head>
 
 
-<body>
+<body class="loading">
 
   <div id="toolbar">
     <img src="i/branding/logo.svg">
     <div class="divider"></div>
     <button id="statesButton" data-overlay="statesOverlay" class="toolbarButton toolbarTab" ><span class="tooltip">Game Shelf</span></button>
-    <button id="activeGameButton" class="active toolbarButton toolbarTab" ><span class="tooltip">Active Game</span></button>
+    <button id="activeGameButton" class="toolbarButton toolbarTab" ><span class="tooltip">Active Game</span></button>
     <button id="playersButton" data-overlay="playerOverlay" class="toolbarButton toolbarTab" ><span class="tooltip">Players</span></button>
     <button id="aboutButton" data-overlay="aboutOverlay" class="toolbarButton toolbarTab"><span class="tooltip">About</span></button>
     <button id="editButton" class="toolbarButton toolbarTab"><span class="tooltip">Edit Mode</span></button>
@@ -38,7 +40,7 @@
 
   <div id="roomArea">
     <div id="room">
-      <div id="topSurface" class="surface"></div>
+      <div id="topSurface" class="surface"><div id="loadingRoomIndicator">Loading room...</div></div>
     </div>
 
     <div id="pileOverlay" class="overlay">
@@ -373,8 +375,8 @@
         <button icon="save" class="onlyForEdit green">Save</button>
         <button icon="upload" class="onlyForEdit" disabled>Uploading</button>
       </div>
-      <div id="mainDetails">
-        <div id="mainImage">
+      <div class="mainStateDetails">
+        <div class="mainStateImage">
           <img data-field="image" data-target="src" class="uneditable">
           <button icon="star_rate" class="star"></button>
           <span data-field="stars" class="uneditable">0</span>
@@ -509,6 +511,41 @@
           <input id="sharedLink" value="Loading link..."/>
           <button icon="link">Copy to clipboard</button>
         </div>
+      </div>
+    </div>
+
+    <div id="linkDetailsOverlay" class="overlay" style="display:none;">
+      <div class="buttons one">
+        <button icon="close" id="closeLinkDetails"></button>
+      </div>
+      <div class="mainStateDetails">
+        <div class="mainStateImage">
+          <img data-field="image" data-target="src" class="uneditable">
+          <button icon="star_rate" class="star"></button>
+          <span data-field="stars" class="uneditable">0</span>
+          <i class="material-icons">link</i>
+        </div>
+        <div class="details">
+          <h1 data-field="name"></h1>
+          <h2 data-showfor="similarName">Similar to: <span data-field="similarName"></span><span data-showfor="year"> (<span data-field="year"></span>)</span></h2>
+          <!--<div data-showfor="bgg" class="hideForEdit"><i class="material-icons">info</i> <a data-field="bgg" data-target="href">Game details on <nobr><i class="material-icons intext">launch</i> <span id="similarDetailsDomain"></span></nobr></a></div>-->
+          <div data-showfor="time"><i class="material-icons">schedule</i> Time: <span data-field="time"></span> minutes</div>
+          <div data-showfor="mode"><i class="material-icons">groups</i> Mode: <span data-field="mode"></span></div>
+          <div data-showfor="skill"><i class="material-icons">psychology</i> Skill: <span data-field="skill"></span></div>
+          <div class="language-info" data-showfor="language"><i class="material-icons">language</i><span data-field="language"></span></div>
+          <div class="player-number-info" data-showfor="players"><i class="material-icons">person</i><span data-field="players"></span></div>
+          <p data-field="description" data-placeholder="&lt;empty game description&gt;"></p>
+        </div>
+      </div>
+      <div class="addToRoomBox">
+        <p>Welcome to <b>VirtualTabletop.io</b>!</p>
+        <p>On this platform you can <b>play board games</b> with family and friends directly in your browser. No accounts necessary.</p>
+        <p>You followed a direct link to the game "<b>Animal Race</b>". In order to start playing it:</p>
+        <p>Enter a room URL and player name of your choice, click PLAY and share the URL with your friends:<br>
+           <b>Room URL:</b> <span id="absoluteLinkURL">https://virtualtabletop.io/</span><input value=s91j><button icon="share"></button><br>
+           <b>Player name:</b> <input value=Guest829></p>
+        <button icon="play_arrow">Play</button>
+        <p icon="warning">This game is <b>user-generated content</b> for which VirtualTabletop.io holds no responsibility or liability.</p>
       </div>
     </div>
 
