--- a/client/room.html
+++ b/client/room.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>VirtualTabletop.io</title>
+  <title> /*** TITLE ***/ </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="icon" sizes="any" href="i/branding/favicon-32.png"/>
   <link rel="icon" type="image/svg+xml" href="i/branding/favicon.svg"/>
