added note to Add Game overlay

--- a/client/room.html
+++ b/client/room.html
@@ -162,7 +162,7 @@
           <button icon="upload">Upload files</button>
         </div>
         <div icon="link">
-          <p>If you have a direct link to a VTT or PCIO file (for example by sharing a link from virtualtabletop.io), you can add the game using the link and you will always play the latest version.</p>
+          <p>If you have a direct link to a VTT or PCIO file (for example by sharing a link from virtualtabletop.io), you can add the game using the link and you will always play the latest version.<br><br>You can also enter a Tabletop Simulator workshop link in order to import it.</p>
           <input placeholder="URL">
           <button icon="link">Add link</button>
         </div>
