Refactor for flexibility

--- a/client/room.html
+++ b/client/room.html
@@ -40,6 +40,10 @@
   <div id="roomArea">
     <div id="room">
       <div id="topSurface" class="surface"></div>
+      <div id="majorGridLinesV1" class="majorLines"></div>
+      <div id="majorGridLinesV2" class="majorLines"></div>
+      <div id="majorGridLinesH1" class="majorLines"></div>
+      <div id="majorGridLinesH2" class="majorLines"></div>
     </div>
 
     <div id="pileOverlay" class="overlay">
