Adds interface for choosing size, color, and major lines

--- a/client/room.html
+++ b/client/room.html
@@ -46,6 +46,10 @@
       <div id="majorGridLinesH2" class="majorLines"></div>
     </div>
 
+    <div id="gridOverlay" class="overlay">
+      <div class="modal"></div>
+    </div>
+
     <div id="pileOverlay" class="overlay">
       <div class="modal"></div>
     </div>
