Add Grid Lines Toggle Button to JSON Editor (#1846)

--- a/client/room.html
+++ b/client/room.html
@@ -42,6 +42,10 @@
       <div id="topSurface" class="surface"></div>
     </div>
 
+    <div id="gridOverlay" class="overlay">
+      <div class="modal"></div>
+    </div>
+
     <div id="pileOverlay" class="overlay">
       <div class="modal"></div>
     </div>
