added `CHOOSE` function

--- a/client/room.html
+++ b/client/room.html
@@ -67,6 +67,10 @@
       </form>
     </div>
 
+    <div id="chooseInputOverlay" class="overlay">
+      <div id="chooseInputOverlayChoices"></div>
+    </div>
+
     <div id="playerOverlay" class="overlay">
       <div class="heading">
         <h1>Players</h1>
