Make the chooser UI better looking

--- a/client/room.html
+++ b/client/room.html
@@ -68,7 +68,13 @@
     </div>
 
     <div id="chooseInputOverlay" class="overlay">
-      <div id="chooseInputOverlayChoices"></div>
+      <h1>Make Your Selection(s)</h1>
+      <div id="chooseInputOverlayChoices" class="chooseContainer"></div>
+      <div id="chooseButtonFields"></div>
+        <div class=footer>
+          <button id="buttonChooseCancel" class='ui-button blue'><label>Cancel</label></button>
+          <button id="buttonChooseConfirm" class='ui-button green'><label>Confirm</label></button>
+        </div>
     </div>
 
     <div id="playerOverlay" class="overlay">
