--- a/client/room.html
+++ b/client/room.html
@@ -235,6 +235,7 @@
           <button icon="edit_off" disabled>Read-only</button>
           <button icon="edit">Edit</button>
           <button icon="delete" class="red">Delete</button>
+          <button icon="settings">Convert to game</button>
           <button icon="upload" class="hidden">Add to public library</button>
         </div>
         <button icon="save" class="onlyForEdit green">Save</button>
