--- a/client/room.html
+++ b/client/room.html
@@ -5,9 +5,7 @@
   <meta charset="utf-8">
   <title> /*** TITLE ***/ </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <base target="_blank">
-  <script>if(location.href.includes('/game/'))document.querySelector('base').href='..'</script>
-  <script>if(location.href.match(/\/game\/[a-z0-9]{8}\//))document.querySelector('base').href='../..'</script>
+  <base target="_blank" href=" /*** EXTERNAL_URL ***/ ">
   <link rel="icon" sizes="any" href="i/branding/favicon-32.png"/>
   <link rel="icon" type="image/svg+xml" href="i/branding/favicon.svg"/>
   <link rel="apple-touch-icon" sizes="180x180" href="i/branding/ios-icon.png">
@@ -411,9 +409,9 @@
         <p>On this platform you can <b>play board games</b> with family and friends directly in your browser. No accounts necessary.</p>
         <p>You followed a direct link to the game "<b>Animal Race</b>". In order to start playing it:</p>
         <p>Enter a room URL and player name of your choice, click PLAY and share the URL with your friends:<br>
-           <b>Room URL:</b> <span id="absoluteLinkURL">https://virtualtabletop.io/</span><input value=s91j><button icon="share"></button><br>
-           <b>Player name:</b> <input value=Guest829></p>
-        <button icon="play_arrow">Play</button>
+           <b>Room URL:</b> <span id="absoluteLinkURL">https://virtualtabletop.io/</span><input id="welcomeJoinRoom" value=s91j><button icon="share"></button><br>
+           <b>Player name:</b> <input id="welcomePlayerName"></p>
+        <button id="welcomePlayButton" icon="play_arrow">Play</button>
         <p icon="warning">This game is <b>user-generated content</b> for which VirtualTabletop.io holds no responsibility or liability.</p>
       </div>
     </div>
