--- a/client/room.html
+++ b/client/room.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title> /*** TITLE ***/ </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <base target="_blank" href=" /*** EXTERNAL_URL ***/ ">
+  <base target="_blank" href=" /*** EXTERNAL_URL ***/ /">
   <link rel="icon" sizes="any" href="i/branding/favicon-32.png"/>
   <link rel="icon" type="image/svg+xml" href="i/branding/favicon.svg"/>
   <link rel="apple-touch-icon" sizes="180x180" href="i/branding/ios-icon.png">
