replaced hard-coded game name by actual name

--- a/client/room.html
+++ b/client/room.html
@@ -407,7 +407,7 @@
       <div class="addToRoomBox">
         <p>Welcome to <b>VirtualTabletop.io</b>!</p>
         <p>On this platform you can <b>play board games</b> with family and friends directly in your browser. No accounts necessary.</p>
-        <p>You followed a direct link to the game "<b>Animal Race</b>". In order to start playing it:</p>
+        <p>You followed a direct link to the game "<b id="welcomeGameName">Animal Race</b>". In order to start playing it:</p>
         <p>Enter a room URL and player name of your choice, click PLAY and share the URL with your friends:<br>
            <b>Room URL:</b> <span id="absoluteLinkURL">https://virtualtabletop.io/</span><input id="welcomeJoinRoom" value=s91j><button icon="share"></button><br>
            <b>Player name:</b> <input id="welcomePlayerName"></p>
