--- a/client/room.html
+++ b/client/room.html
@@ -412,7 +412,7 @@
            <b>Room URL:</b> <span id="absoluteLinkURL">https://virtualtabletop.io/</span><input id="welcomeJoinRoom" value=s91j><button icon="share"></button><br>
            <b>Player name:</b> <input id="welcomePlayerName"></p>
         <button id="welcomePlayButton" icon="play_arrow">Play</button>
-        <p icon="warning">This game is <b>user-generated content</b> for which VirtualTabletop.io holds no responsibility or liability.</p>
+        <p id="welcomeUserGenerated" icon="warning">This game is <b>user-generated content</b> for which VirtualTabletop.io holds no responsibility or liability.</p>
       </div>
     </div>
 
