preset room input with an unused random room

--- a/client/room.html
+++ b/client/room.html
@@ -409,7 +409,7 @@
         <p>On this platform you can <b>play board games</b> with family and friends directly in your browser. No accounts necessary.</p>
         <p>You followed a direct link to the game "<b id="welcomeGameName">Animal Race</b>". In order to start playing it:</p>
         <p>Enter a room URL and player name of your choice, click PLAY and share the URL with your friends:<br>
-           <b>Room URL:</b> <span id="absoluteLinkURL">https://virtualtabletop.io/</span><input id="welcomeJoinRoom" value=s91j><button icon="share"></button><br>
+           <b>Room URL:</b> <span id="absoluteLinkURL">https://virtualtabletop.io/</span><input id="welcomeJoinRoom"><button icon="share"></button><br>
            <b>Player name:</b> <input id="welcomePlayerName"></p>
         <button id="welcomePlayButton" icon="play_arrow">Play</button>
         <p id="welcomeUserGenerated" icon="warning">This game is <b>user-generated content</b> for which VirtualTabletop.io holds no responsibility or liability.</p>
