--- a/client/room.html
+++ b/client/room.html
@@ -58,14 +58,14 @@
     </div>
 
     <div id="buttonInputOverlay" class="overlay">
-      <form class=modal onsubmit="return false">
+      <div class="modal">
         <h1>Button Input</h1>
         <div id="buttonInputFields"></div>
-        <div class=footer>
-          <button id="buttonInputGo" class=positiveInput><span class=UIicon></span><label></label></button>
-          <button id="buttonInputCancel" class=neutralInput><span class=UIicon></span><label></label></button>
+        <div class="footer">
+          <button id="buttonInputGo" class="positiveInput"><span class="UIicon"></span><label></label></button>
+          <button id="buttonInputCancel" class="neutralInput"><span class="UIicon"></span><label></label></button>
         </div>
-      </form>
+      </div>
     </div>
 
     <div id="playerOverlay" class="overlay">
