changed Copy button to Share button

--- a/client/room.html
+++ b/client/room.html
@@ -376,7 +376,7 @@
           <p>Saved in-progress games are not included and will stay private to your room.</p>
           <p>There is no way for people with this link to find your room.</p>
           <input id="sharedLink" value="Loading link..."/>
-          <button icon="link">Copy to clipboard</button>
+          <button icon="share">Share</button>
         </div>
       </div>
     </div>
