centered "Loading room..." and made it bigger

--- a/client/room.html
+++ b/client/room.html
@@ -40,7 +40,7 @@
 
   <div id="roomArea">
     <div id="room">
-      <div id="topSurface" class="surface"><div id="loadingRoomIndicator">Loading room...</div></div>
+      <div id="topSurface" class="surface"><h1 id="loadingRoomIndicator">Loading room...</h1></div>
     </div>
 
     <div id="gridOverlay" class="overlay">
