show different text on the overlay when creating a link to a public library game

--- a/client/room.html
+++ b/client/room.html
@@ -370,11 +370,12 @@
       </div>
       <div>
         <div icon="link">
-          <p>You can share this link with others so they can add your game to their library.</p>
-          <p>The link does not expire.</p>
-          <p>Keep in mind that you change their game whenever you change this game in your library.</p>
-          <p>Saved in-progress games are not included and will stay private to your room.</p>
-          <p>There is no way for people with this link to find your room.</p>
+          <p class="customGameInfo">You can share this link with others so they can add your game to their library.</p>
+          <p class="customGameInfo">The link does not expire.</p>
+          <p class="customGameInfo">Keep in mind that you change their game whenever you change this game in your library.</p>
+          <p class="customGameInfo">Saved in-progress games are not included and will stay private to your room.</p>
+          <p class="customGameInfo">There is no way for people with this link to find your room.</p>
+          <p class="plGameInfo">Use this link to tell your friends about this specific game in the public library.</p>
           <input id="sharedLink" value="Loading link..."/>
           <button icon="share">Share</button>
         </div>
