--- a/client/room.html
+++ b/client/room.html
@@ -411,8 +411,8 @@
         <p>You followed a direct link to the game "<b id="welcomeGameName">Animal Race</b>". In order to start playing it:</p>
         <div class="welcomeInput">
           <p>Enter a room URL and player name of your choice, click PLAY and share the URL with your friends:</p>
-          <b>Room URL:</b>  /*** EXTERNAL_URL ***/ /<input id="welcomeJoinRoom"><button icon="share"></button><br>
-          <b>Player name:</b> <input id="welcomePlayerName">
+          <b>Room URL:</b>  /*** EXTERNAL_URL ***/ /<input id="welcomeJoinRoom" tabindex="1"><button icon="share"></button><br>
+          <b>Player name:</b> <input id="welcomePlayerName" tabindex="2">
           <button id="welcomePlayButton" icon="play_arrow">Play</button>
         </div>
         <p id="welcomeUserGenerated" icon="warning">This game is <b>user-generated content</b> for which VirtualTabletop.io holds no responsibility or liability.</p>
