share button no longer breaks layout when clicked

--- a/client/room.html
+++ b/client/room.html
@@ -411,7 +411,7 @@
         <p>You followed a direct link to the game "<b id="welcomeGameName">Animal Race</b>". In order to start playing it:</p>
         <div class="welcomeInput">
           <p>Enter a room URL and player name of your choice, click PLAY and share the URL with your friends:</p>
-          <b>Room URL:</b>  /*** EXTERNAL_URL ***/ /<input id="welcomeJoinRoom" tabindex="1"><button icon="share"></button><br>
+          <b>Room URL:</b>  /*** EXTERNAL_URL ***/ /<input id="welcomeJoinRoom" tabindex="1"><button icon="share" id="welcomeShareButton"></button><br>
           <b>Player name:</b> <input id="welcomePlayerName" tabindex="2">
           <button id="welcomePlayButton" icon="play_arrow">Play</button>
         </div>
