proper responsive layout - work in progress

--- a/client/room.html
+++ b/client/room.html
@@ -241,8 +241,8 @@
         <button icon="save" class="onlyForEdit green">Save</button>
         <button icon="upload" class="onlyForEdit" disabled>Uploading</button>
       </div>
-      <div class="mainStateDetails">
-        <div class="mainStateImage">
+      <div id="mainDetails">
+        <div id="mainImage">
           <img data-field="image" data-target="src" class="uneditable">
           <button icon="star_rate" class="star"></button>
           <span data-field="stars" class="uneditable">0</span>
