--- a/client/room.html
+++ b/client/room.html
@@ -410,8 +410,8 @@
         <p>On this platform you can <b>play board games</b> with family and friends directly in your browser. No accounts necessary.</p>
         <p>You followed a direct link to the game "<b id="welcomeGameName">Animal Race</b>". In order to start playing it:</p>
         <div class="welcomeInput">
-          <p>Enter a room URL and player name of your choice, click PLAY and share the URL with your friends:</p>
-          <b>Room URL:</b>  /*** EXTERNAL_URL ***/ /<input id="welcomeJoinRoom" tabindex="1"><button icon="share" id="welcomeShareButton"></button><br>
+          <p>Enter a room URL and player name of your choice, click CREATE ROOM, then PLAY and share the URL with your friends:</p>
+          <b>Room URL:</b>  /*** EXTERNAL_URL ***/ /<input id="welcomeJoinRoom" tabindex="1"><button icon="share" id="welcomeShareButton">Share</button><br>
           <b>Player name:</b> <input id="welcomePlayerName" tabindex="2">
           <button id="welcomePlayButton" icon="play_arrow">Create room</button>
         </div>
