Tweaked instructions text

--- a/client/room.html
+++ b/client/room.html
@@ -407,10 +407,10 @@
       </div>
       <div class="addToRoomBox">
         <p>Welcome to <b>VirtualTabletop.io</b>!</p>
-        <p>On this platform you can <b>play board games</b> with family and friends directly in your browser. No accounts necessary.</p>
+        <p>On this platform you can <b>play games</b> with family and friends directly in your browser. No accounts necessary.</p>
         <p>You followed a direct link to the game "<b id="welcomeGameName">Animal Race</b>". In order to start playing it:</p>
         <div class="welcomeInput">
-          <p>Enter a room URL and player name of your choice, click CREATE ROOM, then PLAY and share the URL with your friends:</p>
+          <p>Create a custom room URL and player name or accept the defaults.<br>Share the URL with your friends.<br>Click CREATE ROOM.<br>On the next page, click PLAY.</p>
           <b>Room URL:</b>  /*** EXTERNAL_URL ***/ /<input id="welcomeJoinRoom" tabindex="1"><button icon="share" id="welcomeShareButton">Share</button><br>
           <b>Player name:</b> <input id="welcomePlayerName" tabindex="2">
           <button id="welcomePlayButton" icon="play_arrow">Create room</button>
