tweaked the overlay text for tutorials

--- a/client/room.html
+++ b/client/room.html
@@ -413,7 +413,7 @@
       <div class="addToRoomBox">
         <p>Welcome to <b>VirtualTabletop.io</b>!</p>
         <p>On this platform you can <b>play games</b> with family and friends directly in your browser. No accounts necessary.</p>
-        <p>You followed a direct link to the game "<b id="welcomeGameName">Animal Race</b>". In order to start playing it:</p>
+        <p>You followed a direct link to the <span id="welcomeGameType">game</span> "<b id="welcomeGameName">Animal Race</b>". In order to <span id="welcomeGameTypeHint">start playing it</span>:</p>
         <div class="welcomeInput">
           <ol>
             <li>Create a custom room URL and player name or accept the defaults.</li>
