added a button that converts an in-progress game into a normal game (#1966)

--- a/client/room.html
+++ b/client/room.html
@@ -235,6 +235,7 @@
       <div class="buttons two">
         <button icon="menu" class="hideForEdit"></button>
         <div class="hidden hideForEdit">
+          <button icon="settings">Convert to game</button>
           <button icon="download">Download</button>
           <button icon="link">Share link</button>
           <button icon="link_off">Unlink</button>
