notify users about client crashes and collect information

--- a/client/room.html
+++ b/client/room.html
@@ -502,6 +502,14 @@
       <p>You can try to reload the page. It's very possible that you will run into the same problem again until it is fixed though.</p>
     </div>
 
+    <div id="clientErrorOverlay" class="overlay">
+      <h1>Internal Error</h1>
+      <p>Your client just crashed. Sorry, this shouldn't happen.</p>
+      <p>How can we trigger the error ourselves so we can fix it?</p>
+      <p><textarea style="height: 150px; width: 100%"></textarea></p>
+      <p><button>Submit and Reload</button></p>
+    </div>
+
     <div id="connectionLostOverlay" class="overlay" style="display:none;">
       <h1>Connection lost</h1>
       <div class="disconnected">
