revised editor layout

--- a/client/editor.html
+++ b/client/editor.html
@@ -136,22 +136,18 @@
       <button class="ui-button" id="addBasicWidget">Add Basic Widget</button>
     </div>
   </div>
-  <div id="editorModuleOverlay" class="overlay" style="display: none">
-    <div id="editorModuleInOverlay" class="editorModule"></div>
-  </div>
 </div>
 
 <div id="editor">
   <div id="editorSelection"></div>
   <div id="editorToolbar"></div>
   <div id="editorDragToolbar"><div id="editorDragToolbarFeedback"></div></div>
-  <div id="editorSidebar"></div>
-  <div id="editorModules">
+  <div id="editorSidebar">
+    <div id="editorEditSidebar" class="sidebarButtons"></div>
+    <div id="editorEditModule" class="editorModule"></div>
+    <div id="editorAuxiliaryModule" class="editorModule"></div>
+    <div id="editorAuxiliarySidebar" class="sidebarButtons"></div>
     <div id="editorModulesResizer"></div>
-    <div id="editorModuleTopLeft" class="editorModule"></div>
-    <div id="editorModuleTopRight" class="editorModule"></div>
-    <div id="editorModuleBottomLeft" class="editorModule"></div>
-    <div id="editorModuleBottomRight" class="editorModule"></div>
   </div>
 </div>
 
