added technical details to the client crash overlay

--- a/client/room.html
+++ b/client/room.html
@@ -509,6 +509,10 @@
       <p>Your client just crashed. Sorry, this shouldn't happen.</p>
       <p>How can we trigger the error ourselves so we can fix it?</p>
       <p><textarea style="height: 150px; width: 100%"></textarea></p>
+      <details>
+        <summary>Technical Details</summary>
+        <pre id="clientErrorStack"></pre>
+      </details>
       <p><button>Submit and Reload</button></p>
     </div>
 
